Update grid class names style.css

--- a/css/style.css
+++ b/css/style.css
@@ -67,27 +67,27 @@
 
 }
 @media all and (max-width: 500px) {
-    .grid {
+    .styles {
         grid-template-columns: 1fr;
     }
 
 }
 
 @media all and (min-width: 500px) and (max-width: 750px){
-    .grid {
+    .styles {
         grid-template-columns: 1fr 1fr;
     }
 }
 
 @media all and (max-width: 750px) {
-    .grid {
+    .styles {
         gap: 10px;
     }
-    .grid__item:last-child {
+    .style__item:last-child {
         grid-column: auto/auto;
         grid-row: auto/auto;
     }
-    h1 {
+    h2 {
         font-size: 22px;
     }
 }
