--- a/css/style.css
+++ b/css/style.css
@@ -8,13 +8,14 @@
 :root {
     --primary-color: brown;
     --secondary-color: darkgoldenrod;
+    --tertiary-color: antiquewhite;
 }
 
 
 .page-header {
     display: flex;
     width: 100%;
-    padding: 10px;
+    padding: 5px;
 }
 
 /*h1*/
@@ -39,7 +40,8 @@
 }
 
 .body {
-    background-color: bisque;
+    background-color: rgb(206, 170, 127);
+    width: 100%;
 }
 
 /* .styles {
@@ -47,80 +49,71 @@
 } */
 
 .style-button {
-    background-color: antiquewhite;
+    background-color: var(--primary-color);
     border: none;
-    color: black;
+    color: var(--tertiary-color);
     padding: 16px 32px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
     margin: 4px 2px;
+    width: 100%;
     -webkit-transition-duration: 0.4s; /*Safari?*/
     transition-duration: 0.4s;
     cursor: pointer;
-    border: 2px solid var(--primary-color);
+    border: 2px solid var(--secondary-color);
 }
 
-.style__item {
-    display: inline-block;
-    margin: 10px;
-
-}
-/* 
-li{
-    border: 5px white solid;
-} */
-
-.hide {
-    display: none;
+.style-button:hover {
+    opacity: .8;
 }
 
-.style__item:hover + .hide {
-    display: block;
-    color: red;
+.hairstyles {
+    background-image: url("./img/wooden-background2.avif");
+    background-color: #cccccc;
+    background-repeat: no-repeat;
+    background-size: contain;
 }
-/* 
+
 @supports (display: grid){
     
-    .styles {
+    .hairstyles {
         display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-columns: 1fr;
         gap: 20px;
-        margin: 10px;
-        padding: 20px;
+        margin: 0px;
+        padding: 10px;
     }
     
-    .style__item {
-        background-color: var(--primary-color);
-        width: auto;
+    .style__list {
         min-height: auto;
         margin: 10px;
     }
-    .style__item:last-child {
+    .style__list:last-child{
         grid-column: 3/3;
         grid-row: initial;
     }
 
 }
 @media all and (max-width: 500px) {
-    .styles {
+    .hairstyles {
         grid-template-columns: 1fr;
     }
 
 }
 
 @media all and (min-width: 500px) and (max-width: 750px){
-    .styles {
-        grid-template-columns: 1fr 1fr;
+    .hairstyles {
+        grid-template-columns: 1fr;
     }
 }
 
 @media all and (max-width: 750px) {
-    .styles {
+    .hairstyles {
         gap: 10px;
     }
-    .style__item:last-child {
+    .style__list:last-child {
         grid-column: auto/auto;
         grid-row: auto/auto;
     }
@@ -128,4 +121,4 @@ li{
         font-size: 22px;
     }
 }
- */
+ 
