--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,7 @@
     border: none;
     color: var(--tertiary-color);
     padding: 16px 32px;
-    text-align: center;
+    text-align: left;
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
@@ -121,4 +121,11 @@
         font-size: 22px;
     }
 }
- 
+
+.additional-info {
+    display: none;
+}
+.additional-info.is-visible {
+    display: block;
+    color: black;
+}
