--- a/css/style.css
+++ b/css/style.css
@@ -13,28 +13,27 @@
 
 
 .page-header {
-    display: flex;
+    display: inline;
     width: 100%;
-    padding: 5px;
+    padding: 10px;
+    margin: 20px;
 }
 
 /*h1*/
 .app-header {
-    flex: 0 1 400px;
-    margin: 135px;
-    /* top: 50%;
-    left: 100%; */
+    display: inline;
+    margin: 10px;
+    margin-top: 10px;
     transform: translate(-50%, -50%);
     color: var(--primary-color);
-    font-size: 60px;
+    font-size: 70px;
 }
 
 .page__allBraids-img {
-    flex-grow: 0;
-    width: 250px;
-    height: 200px;
+    width: 200px;
+    height: 150px;
     margin: 0;
-    padding: auto;
+    padding: 0;
     z-index: 0;
     
 }
@@ -66,7 +65,7 @@
 }
 
 .style-button:hover {
-    opacity: .8;
+    opacity: .5;
 }
 
 .hairstyles {
@@ -77,37 +76,66 @@
 }
 
 
-.style__list.is-visible {
-    background-color: var(--primary-color);
-    padding: 10px;
-    box-sizing: border-box;
-    width: 50%;
-    height: auto;
-    z-index: 999;
-
+#modal-container {
+    display: none;
 }
 
-/* .style__list{
-    background-color: var(--primary-color);
-} */
+#modal-container.is-visible {
+    position: fixed;
+    padding: 20px;
+    box-sizing: border-box;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    z-index: 999;
+    /*Allow scrolling is screen is not high enough*/
+    overflow: auto;
+    /*center the modal*/
+    display: grid;
+    text-align: center;
+}
 
-.pokemon-container {
+.modal {
     margin: auto;
     display: inline-block;
-    width: 50%;
+    box-sizing: border-box;
+    border-width: thick;
+    border-style: solid;
+    border-color: var(--secondary-color);
+    background: rgb(123, 35, 35);
+    padding: 15px;
+    width: 100%;
+    max-width: 700px;
+    text-align: left;
 }
 
 .modal-close{
-    /* float: right; */
+    float: right;
+    border: 0;
     background: none;
     color: #777;
     text-decoration: underline;
 }
 
+.modal h1 {
+    margin-top: 0;
+}
+
 .modal p {
-    color: #777;
-    background-color: var(--primary-color);
+    color: var(--secondary-color);
     margin-bottom: 0;
+    font-weight: 400;
+}
+
+.pokemon-img {
+    width: 200px;
+    height: auto;
+}
+
+.pokemon-img:hover {
+    opacity: .7;
 }
 
 @supports (display: grid){
